[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Enemy/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemy/enemy1_sprite.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemy/CommonEnemy.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "walk_anim"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="CommonEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
Max_Speed = 5
WALKING_DIRECTION = 1

[node name="Area2D" parent="." index="0"]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 1, -1 )

[node name="Sprite" parent="." index="1"]
material = null
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, 1 )

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "walk_anim"
anims/walk_anim = SubResource( 1 )

[node name="FloorLeft" type="RayCast2D" parent="." index="4"]
position = Vector2( -1, 8 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="FloorRight" type="RayCast2D" parent="." index="5"]
position = Vector2( 2, 8 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="WallLeft" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( -5, 0 )

[node name="WallRight" type="RayCast2D" parent="." index="7"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 5, 0 )
